aggiunti file javascript con varie modifiche agli effetti

--- a/index.html
+++ b/index.html
@@ -45,25 +45,45 @@
             <div class="col text-light">
               <h2 class="title">Welcome to official web page</h2>
             <p class="fs-5"><b>Hello, my name is Giorgio Marian, I'm 25 years old!
-             <br><br><br>
+             <br><br><br></b>
              I live in Turin, Italy. 
              <br><br>
-             Before I was a pizzaiolo, and a few years ago I was a cook.
-             <br>
-             I studied at ''Giuseppina Colombatto'' State Professional Istitute and now I do a course online with a Start2impact University.
-             <br>
-             I'm happy to radically change my life because the old job would not have ensured me a good future. 
+             I am a Front-End Development student at Start2impact University!
              <br><br>
-             Now I have finished to study HTML, CSS, BOOTSTRAP, GITHUB.
-            </b>
+             Before that, I worked in the restaurant sector, now I'm really happy to do a training course in the sector that I love and which I hope will guarantee me a peaceful future.
+             <br><br>
+             Now I have the following skills:
+             <br> 
+             -Html
+             <br>
+             -Css
+             <br>
+             -Javascript
+             <br>
+             -Bootstrap
+             <br>
+             -Node.js
+             <br>
+             -Github
         </p>
-            </div>
-            <div class="col image"><img src="assets/img/photo- of-me.jpg" class="img-fluid" 
-            width="70%"
-            alt="img-of-me">
-            </div>
-          </div>
+        <br>
+        <br>
+        <div class="col image col-md-6">
+          <img src="assets/img/html.5.png" width="10%" alt="">
+          <img src="assets/img/css.3.png" width="10.5%" alt="">
+          <img src="assets/img/javascript.1.svg" width="8.5%" alt="">
+          <img src="assets/img/bootstrap_logo.svg" width="11%" alt="">
+          <img src="assets/img/node.js_logo.svg" width="11%" alt="">
+          <img src="assets/img/github.1.png" width="9%" alt="">
       </div>
+            </div>
+
+            <div class="col image col-md-4"><img src="assets/img/foto curriculum intera 4.jpg" class=" rounded-circle img-fluid immagine" alt="img-of-me">
+            </div>
+
+          </div>
+        </div>
+
 
       <footer>
         <div>
@@ -76,5 +96,8 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
+    <script src="home/index.js"></script>
+
 </body>
 </html>
