--- a/skills/index.html
+++ b/skills/index.html
@@ -45,20 +45,20 @@
         <div class="row">
           <div class="col">
             <img src="../assets/img/determination.png"
-            class="img-fluid" width="40%" alt="">
-            <p class="fs-4">Determination</p>
+            class="rounded-circle img-fluid" width="40%" alt="">
+            <p class="fs-4">DETERMINATION</p>
             <p class="fs-6">My best quality is determination, because nowdays without determination you do nothing</p>
           </div>
           <div class="col">
             <img src="../assets/img/enterprising.jpg"
-            class="img-fluid" width="40%" alt="">
-            <p class="fs-4">Enterprising</p>
+            class="rounded-circle img-fluid" width="40%" alt="">
+            <p class="fs-4">ENTERPRISING</p>
             <p class="fs-6">Resourcefulness is a value that I have acquired in recent years thanks to the experiences in the world of work</p>
           </div>
           <div class="col">
             <img src="../assets/img/problem solving.png"
-            class="img-fluid" width="40%" alt="">
-            <p class="fs-4">Problem Solving</p>
+            class="rounded-circle img-fluid" width="40%" alt="">
+            <p class="fs-4">PROBLEM SOLVING</p>
             <p class="fs-6">Life puts you in front of obstacles and without good problem solving you don't solve anything and you can't move forward</p>
           </div>
         </div>
@@ -66,20 +66,20 @@
         <div class="row">
             <div class="col">
                 <img src="../assets/img/mental flexible.jpg"
-                class="img-fluid" width="40%" alt="">
-                <p class="fs-4">Mental flexibility and flexible to change</p>
+                class="rounded-circle img-fluid" width="40%" alt="">
+                <p class="fs-4">MENTAL FLEXIBILITY AND FLEXIBILITY TO CHANGE</p>
                 <p class="fs-6">The mind is increasingly faced with a thousand things to do at the same time and with good flexibility you can do everything</p>
             </div>
             <div class="col">
                 <img src="../assets/img/endurance to stress.jpg"
-                class="img-fluid" width="40%" alt="">
-                <p class="fs-4">Endurance to stress</p>
+                class="rounded-circle img-fluid" width="40%" alt="">
+                <p class="fs-4">ENDURANCE TO STRESS</p>
                 <p class="fs-6">Thanks to years of work experience I have developed an excellent resistance to stress</p>
             </div>
             <div class="col">
                 <img src="../assets/img/resilience.webp"
-                class="img-fluid" width="40%" alt="">
-                <p class="fs-4">Resilience and ability to adapt</p>
+                class="rounded-circle img-fluid" width="40%" alt="">
+                <p class="fs-4">RESILIENCE AND ABILITY TO ADAPT</p>
                 <p class="fs-6">Different contests require the possiblity od being able to adapt</p>
             </div>
           </div>
@@ -97,5 +97,6 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="index.js"></script>
 </body>
 </html>
