--- a/goals/index.html
+++ b/goals/index.html
@@ -44,16 +44,44 @@
        <div class="container">
         <div class="row bg-dark">
             <div class="col text-light text-center">
-              <h2 class="title mb-5">THESE ARE MY GOALS FOR THE FUTURE</h2>
-              <p class="fs-6 mb-5">One and the first goal at the moment is to become a good web developer to give my contribution to the world of information tecnology</p>
+              <h2 class="title mb-5">
+                <span>T</span>
+                <span>H</span>
+                <span>E</span>
+                <span>S</span>
+                <span>E </span><br>
+                <span>A</span>
+                <span>R</span>
+                <span class="spazio">E</span>
+                <span>M</span>
+                <span class="spazio">Y</span>
+                <span>G</span>
+                <span>A</span>
+                <span>L</span>
+                <span class="spazio">S</span>
+                <span>F</span>
+                <span>O</span>
+                <span class="spazio">R</span>
+                <span>T</span>
+                <span>H</span>
+                <span class="spazio">E</span>
+                <span>F</span>
+                <span>U</span>
+                <span>T</span>
+                <span>U</span>
+                <span>R</span>
+                <span>E</span>
+                </h2>
+              <p class="fs-6 mb-5">One and the first goal at the moment is to finish my studies at Start2Impact Univesity as Front-end Developer and become a good web developer to give my contribution to the world of information tecnology</p>
 
-              <p class="fs-6 mb-5">Another goal that I want is to create a new original app for the people that can help they every they to live better</p>
+              <p class="fs-6 mb-5">I would also like to become a Back-end developer in the future, but I know that the road is still long and uphill"></p>
+
+              <p class="fs-6 mb-5">Another goal that I has is to create a new original app for the people that can help they every they to live better</p>
+
+              <p class="fs-6 mb-5">Have an important position in a company</p>
 
               <p class="fs-6 mb-5">I have many goals in life and slowly I will reach them</p>
 
-              <p class="fs-6 mb-5">Laugh and be happy every day build my  ouwen house</p>
-
-              <p class="fs-6 mb-5">Get into a leadership position in my compan</p>
             </div>
           </div>
       </div>
@@ -69,5 +97,6 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="index.js"></script>
 </body>
 </html>
