--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -81,7 +81,7 @@
                     <a class="link" href="lavori/youtube/index.html">Youtube</a></p>
             </div>
             <div class="col m-3 gmail all">
-                <p class="fs-2">
+                <p class="fs-2" >
                     <a class="link" href="lavori/gmail/index.html">Gmail</a></p>
             </div>
           </div>
@@ -99,5 +99,7 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
+    <script src="index.js"></script>
 </body>
 </html>
