modificate immagini bootstrap e node.js

--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
           <img src="assets/img/html.5.png" width="10%" alt="">
           <img src="assets/img/css.3.png" width="10.5%" alt="">
           <img src="assets/img/javascript.1.svg" width="8.5%" alt="">
-          <img src="assets/img/bootstrap_logo.svg" width="11%" alt="">
-          <img src="assets/img/node.js_logo.svg" width="11%" alt="">
-          <img src="assets/img/github.1.png" width="9%" alt="">
+          <img src="assets/img/Bootstrap_logo.png" width="12%" alt="">
+          <img src="assets/img/download_node.png" width="10%" alt="">
+          <img src="assets/img/github.1.png" width="10%" alt="">
       </div>
             </div>
 
