modificato img skills

--- a/skills/index.html
+++ b/skills/index.html
@@ -50,13 +50,13 @@
             <p class="fs-6">My best quality is determination, because nowdays without determination you do nothing</p>
           </div>
           <div class="col">
-            <img src="../assets/img/enterprising.jpg"
+            <img src="../assets/img/idea.webp"
             class="rounded-circle img-fluid" width="40%" alt="">
             <p class="fs-4">ENTERPRISING</p>
             <p class="fs-6">Resourcefulness is a value that I have acquired in recent years thanks to the experiences in the world of work</p>
           </div>
           <div class="col">
-            <img src="../assets/img/problem solving.png"
+            <img src="../assets/img/problem solving.jpg"
             class="rounded-circle img-fluid" width="40%" alt="">
             <p class="fs-4">PROBLEM SOLVING</p>
             <p class="fs-6">Life puts you in front of obstacles and without good problem solving you don't solve anything and you can't move forward</p>
@@ -65,8 +65,8 @@
 
         <div class="row">
             <div class="col">
-                <img src="../assets/img/mental flexible.jpg"
-                class="rounded-circle img-fluid" width="40%" alt="">
+                <img src="../assets/img/flex.jpg"
+                class="  rounded-circle img-fluid bg-light" width="40%" alt="">
                 <p class="fs-4">MENTAL FLEXIBILITY AND FLEXIBILITY TO CHANGE</p>
                 <p class="fs-6">The mind is increasingly faced with a thousand things to do at the same time and with good flexibility you can do everything</p>
             </div>
