--- a/goals/index.html
+++ b/goals/index.html
@@ -56,6 +56,7 @@
                 <span>M</span>
                 <span class="spazio">Y</span>
                 <span>G</span>
+                <span>O</span>
                 <span>A</span>
                 <span>L</span>
                 <span class="spazio">S</span>
