modificato border img skills

--- a/skills/index.html
+++ b/skills/index.html
@@ -66,7 +66,7 @@
         <div class="row">
             <div class="col">
                 <img src="../assets/img/flex.jpg"
-                class="  rounded-circle img-fluid bg-light" width="40%" alt="">
+                class="rounded-circle img-fluid" width="40%" alt="">
                 <p class="fs-4">MENTAL FLEXIBILITY AND FLEXIBILITY TO CHANGE</p>
                 <p class="fs-6">The mind is increasingly faced with a thousand things to do at the same time and with good flexibility you can do everything</p>
             </div>
