--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <!-- navbar -->
 
 
-  <nav class="navbar navbar-expand-lg bg-dark border-bottom border-body fixed-top mx-5" data-bs-theme="dark">
+  <nav class="navbar navbar-expand-lg bg-dark border-bottom border-body fixed-top mx-auto" data-bs-theme="dark">
     <div class="container">
       <a class="navbar-brand" href="#home"><b>
           <h3 id="brandNome">GM</h3>
@@ -44,7 +44,7 @@
 
   <section id="home">
 
-    <div class="container init">
+    <div class="container init mb-1">
       <div class="row first">
         <div class="col black bg-dark fw-bold fs-1 d-flex align-items-center justify-content-end">GIORGIO</div>
         <div class="col white bg-light text-dark fw-bold fs-1 d-flex align-items-center">MARIAN</div>
